--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "axios": "^1.11.0",
     "cookie": "^1.0.2",
     "formik": "^2.4.6",
-    "next": "15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.8",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hot-toast": "^2.5.2",
     "react-paginate": "^8.3.0",
     "use-debounce": "^10.0.5",
